[gd_scene load_steps=9 format=3 uid="uid://y4x6gnmqwbfe"]

[ext_resource type="Script" uid="uid://c76febyhc85wx" path="res://Scripts/Objetos/Enemies/dulce.gd" id="1_6rbys"]
[ext_resource type="Texture2D" uid="uid://de533emwl25ck" path="res://Objects/Cadenadulce/dulce.png" id="1_e88c8"]
[ext_resource type="PackedScene" uid="uid://myfgx5h1ha52" path="res://Scenes/Objetos/enemies/onechain.tscn" id="3_6rbys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6rbys"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_58mac"]
radius = 14.6667

[sub_resource type="Animation" id="Animation_6rbys"]
resource_name = "regular_move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_58mac"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dj5m"]
_data = {
&"RESET": SubResource("Animation_58mac"),
&"regular_move": SubResource("Animation_6rbys")
}

[node name="Dulce" type="Node2D"]
script = ExtResource("1_6rbys")

[node name="Dulce" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0.5, 15)
scale = Vector2(0.75, 0.8)
texture = ExtResource("1_e88c8")

[node name="Area_collision_with_map" type="Area2D" parent="Dulce"]
position = Vector2(-0.666667, -18.75)
scale = Vector2(1.33333, 1.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dulce/Area_collision_with_map"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_6rbys")

[node name="damage_zone" type="Area2D" parent="Dulce"]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dulce/damage_zone"]
position = Vector2(-0.666667, 0)
shape = SubResource("CircleShape2D_58mac")

[node name="raycast_floor_detection" type="RayCast2D" parent="."]
target_position = Vector2(0, 27)

[node name="safeTime" type="Timer" parent="."]
one_shot = true

[node name="OneChain" parent="." instance=ExtResource("3_6rbys")]

[node name="animation_rotation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0dj5m")
}

[connection signal="body_entered" from="Dulce/Area_collision_with_map" to="." method="_on_area_collision_with_map_body_entered"]
[connection signal="timeout" from="safeTime" to="." method="_on_safe_time_timeout"]
